# sql-divider

./: .env  NOTICE.md  README.md  docker-compose.yml  package-lock.json  package.json  statement.html  vite.config.ts
.devcontainer/: devcontainer.json  devcontainer.vim.json
.github/workflows/: publish.yml
doc/: worklog.md
src/: App.tsx  statement.tsx  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  database.rs  lib.rs  main.rs  model.rs  mysql.rs  postgres.rs  sql_parser.rs
src/components/: MaterialUISwitch.tsx  Parameters.tsx  QueryResultView.tsx  Statements.tsx
src/pages/: StatementPage.tsx
src/services/: Service.ts  TauriService.ts
