[package]
name = "sql-divider"
version = "0.0.6"
description = "SQL のサブクエリ発行を簡単にするやつ"
authors = ["mikoto2000"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sql_divider_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.2", features = ["full"] }
sqlx = { version = "0.8.0", features = ["bigdecimal", "chrono", "mysql", "postgres", "runtime-tokio"] }
dotenv = "0.15.0"
sqlparser = "0.50.0"
tauri-plugin-window-state = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc.2"
md5 = "0.7.0"

